# homework

basics/: LinckedList.py  Sapper.py  lan.py
databases/: pyproject.toml
databases/bookshop/: database.py  main.py  models.py
databases/simplex/: database.py  main.py  models.py  services.py  srvices.py
